Fixed company id error, improved css, updated workflow of readable inputs for expense items

--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -88,3 +88,20 @@
   text-align: center;
   vertical-align: top !important;
 }
+
+.table th:last-child {
+  text-align: center;
+  vertical-align: top !important;
+}
+
+.table td:last-child div {
+  text-align: center;
+  justify-content: center;
+  align-items: center; 
+}
+
+
+#table-responsive th {
+  text-align: center;
+  vertical-align: top !important;
+}
